// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloudEventCustomHeadersEditor tests Add headers 1`] = `
<div>
  <div
    data-ouia-component-type="custom-headers-editor"
    data-ouia-safe="true"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-link pf-m-inline"
          data-ouia-component-id="OUIA-Generated-Button-link-2"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-c-button__icon pf-m-start"
          />
          Add Header
        </button>
      </div>
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-l-grid"
          data-ouia-component-id="custom-headers-editor-grid"
          data-ouia-component-type="custom-headers-editor"
          data-ouia-safe="true"
        >
          <div
            class="pf-l-grid__item pf-m-4-col"
          >
            <h4>
              Header Name
            </h4>
          </div>
          <div
            class="pf-l-grid__item pf-m-8-col"
          >
            <h4>
              Value
            </h4>
          </div>
          <div
            class="pf-l-grid__item pf-m-4-col"
          >
            <input
              aria-invalid="false"
              class="pf-c-form-control"
              data-ouia-component-id="OUIA-Generated-TextInputBase-1"
              data-ouia-component-type="PF4/TextInput"
              data-ouia-safe="true"
              data-testid="update-key"
              id="header-key-0-input"
              type="text"
              value="key"
            />
          </div>
          <div
            class="pf-l-grid__item pf-m-7-col"
          >
            <input
              aria-invalid="false"
              class="pf-c-form-control"
              data-ouia-component-id="OUIA-Generated-TextInputBase-2"
              data-ouia-component-type="PF4/TextInput"
              data-ouia-safe="true"
              data-testid="update-value"
              id="header-value-0-input"
              type="text"
              value="value"
            />
          </div>
          <div
            class="pf-l-grid__item pf-m-1-col"
          >
            <button
              aria-disabled="false"
              aria-label="delete"
              class="pf-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-1"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CloudEventCustomHeadersEditor tests Snapshot - empty 1`] = `
<div>
  <div
    data-ouia-component-type="custom-headers-editor"
    data-ouia-safe="true"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-link pf-m-inline"
          data-ouia-component-id="OUIA-Generated-Button-link-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-c-button__icon pf-m-start"
          />
          Add Header
        </button>
      </div>
    </div>
  </div>
</div>
`;
